# Jyamithika

./: CMakeLists.txt  README.md
BSP2DSample/: BSP2DSample.vcxproj  BSP2DSample.vcxproj.filters
Graphics/GraphicUtils/: Camera.cpp  Camera.h  GraphicUtils.cpp  GraphicUtils.h  ShaderProgram.cpp  ShaderProgram.h  ShaderString.cpp  ShaderString.h  VertexArray.cpp
Graphics/GraphicUtils/Geometry/: GLine.h
Graphics/GraphicUtils/Imgui/: imgui_impl_opengl3.h
Graphics/GraphicUtils/Shaders/: generic_line.shader  triangle2d.shader
Jyamithika/: Convexhull.cpp  Convexhull.h  Delaunay.cpp  Delaunay.h  MonotonePartition.cpp  Triangulation.cpp  Triangulation.h  Voronoi.cpp  delaunator.cpp
Jyamithika/Core/: Distance.cpp  Distance.h  GeoUtils.cpp  GeoUtils.h
Jyamithika/Core/Base/: Core.h  Vector.cpp  Vector.h
Jyamithika/Core/Primitives/: PolygonDCEL.h
Samples/BSPVisualization/: BSPVisualization.vcxproj  BSPVisualization.vcxproj.filters
Samples/Convexhull2D/: ConstructingConvexhull_2d_simulation.cpp
Samples/KDTreeVisualization/: KDTree2DSimulation.cpp
Samples/PolygonTriangulation/: PolygonTriangulationSimulation.cpp
Samples/VoronoiDiragram/: DelaunayWarpper.h  SimpleVoronoi2dSimulation.cpp
